[package]
name = "bevy-godot-swarm"
version = "0.1.0"
authors = ["Tim Yuen <timothy.yuen22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
bevy_ecs = "0.5.0"
